--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "@ngx-translate/core": "^12.1.2",
+    "angular2-flash-messages": "^3.0.1",
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.3",
     "font-awesome": "^4.7.0",
